Atualiza .env com variáveis corretas para produção

--- a/admin-panel/.env
+++ b/admin-panel/.env
@@ -1,9 +1,11 @@
+
 # Configurações do Banco de Dados Principal (jojodreamteam)
 DB_HOST=jojodreamteam.cgv8aga22uxg.us-east-1.rds.amazonaws.com
 DB_USER=admin
+DB_PASSWORD=soufoda123
 DB_NAME=jojodreamteam
+DB_NAME_PIX=jojopix
 DB_PORT=3306
-DB_PASSWORD=sua_senha_aqui
 
 # Senha do Admin Panel
 ADMIN_PASSWORD=admin123
