--- a/vercel.json
+++ b/vercel.json
@@ -3,11 +3,7 @@
   "rewrites": [
     {
       "source": "/",
-      "destination": "/public/index.html"
-    },
-    {
-      "source": "/emoji-converter",
-      "destination": "/public/emoji-converter.html" 
+      "destination": "/admin-panel/public/index.html"
     },
     {
       "source": "/api/(.*)",
@@ -16,7 +12,7 @@
   ],
   "functions": {
     "api/**/*.js": {
-      "maxDuration": 10
+      "maxDuration": 30
     }
   }
 }
