--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 DB_HOST=jojodreamteam.cgv8aga22uxg.us-east-1.rds.amazonaws.com
 DB_USER=admin
 DB_PASSWORD=soufoda123
-DB_NAME=jojodb
+DB_NAME=jojodreamteam
 DB_PORT=3306
 DB_NAME_PIX=jojopix
