Correções backend: queries ajustadas para colunas reais, rota user corrigida, stats e players funcionando.

--- a/admin-panel/.env
+++ b/admin-panel/.env
@@ -1,4 +1,4 @@
-
+# Configurações do Banco de Dados Principal (jojodreamteam)
 # Configurações do Banco de Dados Principal (jojodreamteam)
 DB_HOST=jojodreamteam.cgv8aga22uxg.us-east-1.rds.amazonaws.com
 DB_USER=admin
